fix(header): re-layout header elements to solve disappear of dropdown and overflow border

--- a/src/components/HeaderAuthenticated/header.scss
+++ b/src/components/HeaderAuthenticated/header.scss
@@ -11,10 +11,8 @@
     .cds--header__global {
         position: relative;
         overflow: hidden;
-    }
-
-    .user-list-nav-button {
-        margin-left: 3rem;
+        align-items: center;
+        height: 100%; // 1px for search input bottom border, due to overflow hidden
     }
 
     .search-container.cds--search--md.cds--search--expandable,
@@ -23,10 +21,8 @@
         display: flex;
         align-items: center;
         z-index: 1;
-        position: absolute;
-        right: 6rem;
         height: 3rem;
-        max-width: calc(100% - 6rem);
+        max-width: 100%;
         width: 3rem;
 
         &.cds--search--expanded .cds--search-input,
@@ -53,6 +49,7 @@
     .search-container {
         &.bx--search--expandable.bx--search--expanded {
             width: 100vw;
+            position: absolute;
         }
 
         .bx--search-close {
